<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">मोबाइल खाता</string>
    <string name="action_settings">सेटिंग्स</string>
    <string name="name">नाम</string>
    <string name="date">तारीख</string>
    <string name="amount">रकम</string>
    <string name="debit">डेबिट</string>
    <string name="credit">क्रेडिट</string>
    <string name="txn_typ">Type</string>
    <string name="phone">मोबाइल</string>
    <string name="save">सहेजें</string>
    <string name="confirm_delete">क्या आप इसे मिटाना चाहते हैं।</string>
    <string name="yes">हाँ</string>
    <string name="ok">ठीक है</string>
    <string name="no">नहीं</string>
    <string name="comments">इसके लिए:</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="view_report">रिपोर्ट देखें</string>
    <string name="report">रिपोर्ट</string>
    <string name="add_transaction">लेनदेन जोड़े</string>
    <string name="new_transaction">नया लेनदेन</string>
    <string name="add_user">ग्राहक जोड़े</string>
    <string name="new_customer">नया ग्राहक</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="mobile">मोबाइल</string>
    <string name="read_contact">फोनबुक से ग्राहक जोड़े</string>
    <string name="delete">मिटाएं</string>
    <string name="customers">ग्राहकों की सूची</string>

    <string name="pin_setup">PIN Setup</string>
    <string name="pin_reset">Reset PIN</string>
</resources>