<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:id="@+id/content_dashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/transact"
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addNew"
            android:text="@string/add_transaction" />

        <Button
            android:id="@+id/report"
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="viewReport"
            android:text="@string/view_report" />


        <Button
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addUser"
            android:text="@string/add_user" />


        <Button
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="readContact"
            android:text="@string/read_contact" />


        <Button
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="customers"
            android:text="@string/customers" />


    </LinearLayout>


</ScrollView>


