<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/date"
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />


        <TextView
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <AutoCompleteTextView
            android:id="@+id/name"
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <EditText
            android:id="@+id/amount"
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/comments"
            android:text="@string/comments"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText

            android:id="@+id/comments"
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <RadioGroup
            android:id="@+id/txn_type"
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_debit"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_debit"
                style="@style/editBox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/debit" />

            <RadioButton
                android:id="@+id/radio_credit"
                style="@style/editBox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/credit" />

        </RadioGroup>


    </LinearLayout>


    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:gravity="bottom|center"
        android:onClick="save"
        android:text="@string/save"
        android:textSize="30sp" />

</RelativeLayout>